# pkg/pb/notification.swagger.json
@@ -15,7 +15,7 @@
     "application/json"
   ],
   "paths": {
-    "/v1/hello": {
+    "/v1/SayHello": {
       "post": {
         "summary": "#API 0.SayHello:gRPC testing,Sends a greeting.",
         "operationId": "SayHello",
@@ -96,10 +96,10 @@
         ]
       }
     },
-    "/v1/nf/CreateNfWaddrs": {
+    "/v1/nf/CreateNfWithAddrs": {
       "post": {
-        "summary": "#API 1.CreateNfWaddrs：create nf with addrs(email addrs, phone numbers).",
-        "operationId": "CreateNfWaddrs",
+        "summary": "#API 1.CreateNfWithAddrs：create notification with addrs(email addrs, phone numbers).",
+        "operationId": "CreateNfWithAddrs",
         "responses": {
           "200": {
             "description": "",
@@ -114,7 +114,7 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/pbCreateNfWaddrsRequest"
+              "$ref": "#/definitions/pbCreateNfWithAddrsRequest"
             }
           }
         ],
@@ -257,7 +257,7 @@
         }
       }
     },
-    "pbCreateNfWaddrsRequest": {
+    "pbCreateNfWithAddrsRequest": {
       "type": "object",
       "properties": {
         "nf_post_type": {
